--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -10,7 +10,106 @@
 
 > 笔试时间 2020/8/23
 
-### 一面 2020/8/27
+### 一面 2020/8/27 45min
+
+1. js的基本数据类型
+2. null 和 undefined的区别
+3. `Number(null)` 和 `Number(undefined)` 输出啥
+
+    0 和 NaN
+
+4. `parseInt(undefined, 10)` 输出啥
+
+    NaN
+5. bigint听过没
+
+    BigInt 是一种内置对象，它提供了一种方法来表示大于 253 - 1 的整数。
+6. 数组去重的方法
+7. new Set().map可以用吗
+
+    不可以!!! Set只有has,add,delete,clear方法以及size属性,可以使用keys(),values(),entries(),forEach()
+8. `const a = [1,2,3].map(k => console.log(k))` 的返回值是啥
+
+    [undefined, undefined, undefined]
+9. vue中key为什么不能用index
+10. js的事件执行机制
+11. 一段代码确定输出
+
+    ```js
+    console.log('1');
+    async function fun1() {
+        console.log('2');
+        await fun2();
+        console.log('3');
+    }
+    async function fun2() {
+        console.log('4');
+    }
+
+    process.nextTick(function() {
+        console.log('5');
+    })
+
+    setTimeout(function() {
+        console.log('6');
+        process.nextTick(function() {
+            console.log('7');
+        })
+        new Promise(function(resolve) {
+            console.log('8');
+            resolve();
+        }).then(function() {
+            console.log('9')
+        })
+    })
+
+    fun1();
+
+    new Promise(function(resolve) {
+        console.log('10');
+        resolve();
+    }).then(function() {
+        console.log('11');
+    });
+    console.log('12');
+
+    // 答案是我的回答
+    // 1
+    // 2
+    // 4
+    // 10
+    // 12
+    // 5
+    // 3
+    // 11
+    // 6
+    // 8
+    // 7
+    // 9
+    ```
+
+12. process.nextTick()是在这一轮的事件循环末执行还是在下一轮的事件循环初执行还是在两者之间执行
+
+    process.nextTick这个名字有点误导，它是在本轮循环执行的，而且是所有异步任务里面最快执行的。
+    Node 执行完所有同步任务，接下来就会执行process.nextTick的任务队列。
+
+13. 手撕代码
+
+    给定一个数组const a = [-1,3,2,4,5,-6,7,-9];将这个数组正负数交叉排序,0当做正数处理,返回[3,-1,2,-6,4,-9,5,7]
+
+14. 页面上有一个正方形的div(红色),如何使得用户看不见它
+
+    通过css scale缩放成0(面试官想让我说这个,愣是想不到)
+
+15. 反问
+
+    ```txt
+    (1)业务 面向海外的创意,给广告主提供创意的
+    (2)技术栈 react 公司自己开发的组件库
+    (3)部门规模 不到150人 这个部门刚成立2个月
+    ```
+
+### 二面 2020/8/28
 
 ## 上海京东 2020/7/19投递（提前批转校招）
 
