--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -111,6 +111,99 @@
 
 ### 二面 2020/8/28
 
+1. 业务
+
+    ```txt
+    这跟我的项目有关
+    cpm是什么?(千次展示费用，即广告展示一千次需要支付的费用。...忘了)
+    那你把你知道的说一说?次留率 消费成本 激活数 点击率
+    那次留率,激活数是什么?(...忘了)
+    ```
+
+2. 项目的难点
+3. vue data中有一个数据a: null,现在要监听a变化,但是只能变化一次.比如(null->1行, 1->2就不能变化了)
+4. 设计一个树形组件(可以展示层级的一个菜单)
+
+    ```txt
+    比如实现这样的菜单
+    - 上海
+     - 浦东
+       - 张江
+       - 唐镇
+     - 长宁
+     - 松江
+
+    数据是类似这样的格式:
+    treeData = [
+      {
+        name: '上海',
+        level: 1,
+        children: [
+          {
+            name: '浦东',
+            level: 2,
+            children: [
+              {name: '张江', level: 3, children: null},
+              {name: '唐镇', level: 3, children: null}
+            ]
+          },
+          {name: '长宁', level: 2, children: null},
+          {name: '松江', level: 2, children: null}
+        ]
+      }
+    ]
+
+    我的思路是写一个方法,递归调用给的数据,最后这个方法返回的是一个拼接好的模板字符串,放到template中
+
+    面试官问这种方式行不行:(别问,问就是行!思路大概是递归调用组件)
+    <tree :data=treeData/>
+
+    <div>
+      {tree.name}
+      <tree :data=treeData.children v-if="Array.isArray(treeData.children)"/>
+    </div>
+    ```
+  
+5. 前端你想走什么方向
+6. 代码题
+
+    ```js
+    fs.readFile('/etc/passwd', (err, data) => {
+      if (err) throw err;
+      console.log(data);
+    });
+
+    const readFile = promisify(fs.readFile)
+
+    readFile('/etc/passwd').then((data) => {}, (err) => {})
+
+    // 面试官提示
+    promisify(fn)
+
+    fn = (...args, (err, data) => {
+    })
+
+    // 实现promisify
+
+    function promisify(fn) {
+        return function () {
+            let args = [...arguments];
+            return new Promise((resolve, reject) => {
+                fn(...args, (err, data) => {
+                  if (err) reject(err);
+                  resolve(data);
+                })
+            })
+        }
+    }
+    ```
+
+7. 反问
+
+    1. 作为开发人员也需要熟悉业务吗
+    2. 部门前端这块儿大概有多少人
+    3. 开发过程中有没有碰到Mac/Window滚动条不兼容的问题,咋处理的
+
 ## 上海京东 2020/7/19投递（提前批转校招）
 
 > 笔试时间 2020/8/27
@@ -118,6 +211,8 @@
 ## 南京华为 两个志愿(CBG云服务部/CBG电商平台) 2020/8/21投递
 
 ## 海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递
+
+> 2020/8/28 笔试
 
 ## 恒生电子 杭州 2020/8/21投递
 
@@ -127,8 +222,12 @@
 
 ## 上海东方财富 2020/8/21投递
 
+> 2020/8/29 笔试
+
 ## 南京焦点科技 2020/8/21投递
 
 ### 一面 2020/9/1
 
 ## shopee 2020/8/25投递
+
+> 2020/9/1 笔试
