--- a/01.浏览器/浏览器.md
+++ b/01.浏览器/浏览器.md
@@ -6,6 +6,8 @@
   - [HTTPS 协议的工作原理](#https-协议的工作原理)
   - [HTTP/2.0 特性](#http20-特性)
   - [TCP 和 UDP 之间的区别](#tcp-和-udp-之间的区别)
+  - [TCP 的三次握手和四次挥手](#tcp-的三次握手和四次挥手)
+  - [对称加密和非对称加密的区别](#对称加密和非对称加密的区别)
   - [WebSocket 协议](#websocket-协议)
   - [什么是浏览器的同源政策](#什么是浏览器的同源政策)
   - [HTTP 请求的方式](#http-请求的方式)
@@ -42,7 +44,7 @@
    - 301 永久性重定向，表示请求的资源已被分配了新的 URI
    - 302 临时性重定向，资源的 URL 已临时定位到其他位置
    - 303 告诉客户端应该用另一个 URL 获取资源
-   - 304 表示客户端发送附带条件的请求 时，服务器端允许请求访问资源，但未满足条件的情况
+   - 304 表示客户端发送附带条件的请求时，服务器端允许请求访问资源，但未满足条件的情况
 4. 4XX 客户端错误状态码
    - 400 表示请求报文中存在语法错误
    - 401 未授权
@@ -86,6 +88,10 @@ TCP：传输控制协议 UDP：用户数据报协议
 3. TCP 是面向字节流，UDP 面向报文；
 4. TCP 只能是 1 对 1 的，UDP 支持 1 对 1,1 对多；
 5. TCP 的首部较大为 20 字节，而 UDP 只有 8 字节；
+
+## TCP 的三次握手和四次挥手
+
+## 对称加密和非对称加密的区别
 
 ## WebSocket 协议
 
