--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -1024,7 +1024,7 @@ function merge(left, right) {
 或者每个结点的值都小于或等于其左右孩子结点的值，称为小顶堆。如下图：
 总结下堆排序的基本思路：
 
-- 将无需序列构建成一个堆，根据升序降序需求选择大顶堆或小顶堆;
+- 将无序序列构建成一个堆，根据升序降序需求选择大顶堆或小顶堆;
 - 将堆顶元素与末尾元素交换，将最大元素"沉"到数组末端;
 - 重新调整结构，使其满足堆定义，然后继续交换堆顶元素与当前末尾元素，反复执行调整+交换步骤，直到整个序列有序。
 
