--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -1490,6 +1490,36 @@ promise2
 setTimeout
 ```
 
+- process.nextTick()要优于promise.then执行
+
+> node中存在着一个特殊的队列，即nextTick queue。这个队列中的回调执行虽然没有被表示为一个阶段，当时这些事件却会在每一个阶段执行完毕准备进入下一个阶段时优先执行。当事件循环准备进入下一个阶段之前，会先检查nextTick queue中是否有任务，如果有，那么会先清空这个队列。
+
+```js
+process.nextTick(function(){
+    console.log(7);
+});
+
+new Promise(function(resolve){
+    console.log(3);
+    resolve();
+    console.log(4);
+}).then(function(){
+    console.log(5);
+});
+
+process.nextTick(function(){
+    console.log(8);
+});
+```
+
+```js
+3
+4
+7
+8
+5
+```
+
 ## 水平垂直居中
 
 - html代码
