--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -163,9 +163,10 @@
       <tree :data=treeData.children v-if="Array.isArray(treeData.children)"/>
     </div>
     ```
-  
-5. 前端你想走什么方向
-6. 代码题
+
+5. vue的路由模式
+6. 前端你想走什么方向
+7. 代码题
 
     ```js
     fs.readFile('/etc/passwd', (err, data) => {
@@ -198,7 +199,7 @@
     }
     ```
 
-7. 反问
+8. 反问
 
     1. 作为开发人员也需要熟悉业务吗
     2. 部门前端这块儿大概有多少人
