feat: 2020/9/1 添加三份面经

--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -10,7 +10,7 @@
 
 > 笔试时间 2020/8/23
 
-### 一面 2020/8/27 45min
+### 一面 2020/8/27
 
 1. js的基本数据类型
 2. null 和 undefined的区别
@@ -174,8 +174,11 @@
       console.log(data);
     });
 
+
+     // 实现一个promisify(fn)函数
     const readFile = promisify(fs.readFile)
 
+    // 效果
     readFile('/etc/passwd').then((data) => {}, (err) => {})
 
     // 面试官提示
@@ -207,11 +210,42 @@
 
 ### 三面 2020/9/1
 
+1. 自我介绍
+2. 说一说你的强项是什么
+3. 手撕代码：无序数组找中位数
+4. 手撕代码：快排
+5. 快排的复杂度，什么时候复杂度是最差的
+6. vuex是干嘛的
+7. 在根组件里写要共享的数据，为什么不行呢
+8. 说说你最拿手的一个项目
+
 ## 上海京东 2020/7/19投递 数科（提前批转校招）
 
 > 笔试时间 2020/8/27
 
 ### 一面 2020/9/1
+
+1. 自我介绍
+2. 实习结束了为什么不转正留在那里
+3. 实习公司的技术栈,react有用过吗
+4. git命令的使用方式，`git rebase` 是干嘛的, `git merge` 是干嘛的
+5. ES6 class 是怎么实现的
+6. ES6 class 和 ES5 function 的区别
+7. Vue 的双向数据绑定
+8. Vue3 是怎么实现数据劫持的
+9. 父子组件传值的方式
+10. 垂直居中的方式
+11. apply call bind 的作用和区别
+12. 有尝试过自己去实现一个组件吗
+13. 假如让你自己去写一个类似的组件，你要怎么做，解决的过程描述一下（不会）
+14. 排序算法 快排的算法复杂度
+15. 500代码什么意思，4开头的是什么 3开头的是什么
+16. HTTP请求 EncodingType，具体对什么内容编码
+17. 反问
+
+    - 部门的具体情况 京东内容的大前端团队 部门的技术偏向react
+    - 大前端大概有多少人 几十人。。。
+    - 面试流程 两轮技术面
 
 ## 南京华为 两个志愿(CBG云服务部/CBG电商平台) 2020/8/21投递
 
@@ -232,6 +266,24 @@
 ## 南京焦点科技 2020/8/21投递
 
 ### 一面 2020/9/1
+
+1. 自我介绍
+2. html结构讲一下
+3. meta标签有哪些
+4. html语义化的作用
+5. css两栏布局
+6. 脱离文档流的的方式
+7. position的默认值（static）
+8. JS onload 和 DOMContentLoaded事件
+9. Vue 路由，监听的什么事件
+10. Vuex的底层是怎么实现的
+11. Web图片格式你知道哪些
+12. 页面的优化方式
+13. 移动端、小程序有经验吗
+14. 反问
+
+    - 部门情况（跨境交易事业部）
+    - 面试流程 三轮（技术面 小leader 大leader）
 
 ## shopee 2020/8/25投递
 
