feat: 数据结构添加树的遍历方法

--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -15,8 +15,14 @@
   - [四、链表](#四链表)
     - [1.链表封装](#1链表封装)
     - [2.双向链表](#2双向链表)
-  - [五、集合](#五集合)
-  - [六、排序算法](#六排序算法)
+  - [五、树](#五树)
+    - [树的遍历（递归与非递归）](#树的遍历递归与非递归)
+      - [前序遍历](#前序遍历)
+      - [中序遍历](#中序遍历)
+      - [后序遍历](#后序遍历)
+      - [层序遍历](#层序遍历)
+  - [六、集合](#六集合)
+  - [七、排序算法](#七排序算法)
     - [1.冒泡排序](#1冒泡排序)
     - [2.选择排序](#2选择排序)
     - [3.插入排序](#3插入排序)
@@ -652,7 +658,338 @@ function DoublyLinkedList() {
 }
 ```
 
-## 五、集合
+## 五、树
+
+- 树的定义
+
+```js
+function TreeNode(x) {
+  this.val = x;
+  this.left = null;
+  this.right = null;
+}
+```
+
+### 树的遍历（递归与非递归）
+
+#### 前序遍历
+
+- 递归遍历
+
+```js
+function preOrder(root) {
+  let res = [];
+  function __preOrder(root) {
+    if (!root) return null;
+    res.push(root.val);
+    __preOrder(root.left);
+    __preOrder(root.right);
+  }
+  __preOrder(root);
+  return res
+}
+```
+
+- 非递归遍历
+
+```js
+function preOrder(root) {
+  if (!root) return null;
+  let nodes = [];
+  let res = [];
+  nodes.push(root);
+  while(nodes.length) {
+    let node = nodes.pop();
+    res.push(node.val);
+    node.right && nodes.push(node.right);
+    node.left && nodes.push(node.left);
+  }
+  return res
+}
+```
+
+- 测试
+
+```txt
+                1
+            /       \
+          2           3
+        /   \      /     \
+      4       5   6       7
+```
+
+```js
+// root 结构如上
+let root = {
+  val: 1,
+  left: {
+    val: 2,
+    left: {
+      val: 4,
+      left: null,
+      right: null
+    },
+    right: {
+      val: 5,
+      left: null,
+      right: null
+    }
+  },
+  right: {
+    val: 3,
+    left: {
+      val: 6,
+      left: null,
+      right: null
+    },
+    right: {
+      val: 7,
+      left: null,
+      right: null
+    }
+  }
+}
+
+console.log(preOrder(root)); // [1, 2, 4, 5, 3, 6, 7]
+```
+
+#### 中序遍历
+
+- 递归遍历
+
+```js
+function midOrder(root) {
+  let res = [];
+  function __midOrder(root) {
+    if (!root) return null;
+    __midOrder(root.left);
+    res.push(root.val);
+    __midOrder(root.right);
+  }
+  __midOrder(root);
+  return res
+}
+```
+
+- 非递归遍历
+
+```js
+function midOrder(root) {
+  if (!root) return null;
+  let nodes = [];
+  let res = [];
+  while (root || nodes.length) {
+    if (root) {
+      nodes.push(root);
+      root = root.left;
+    } else {
+      let node = nodes.pop();
+      res.push(node.val);
+      root = node.right;
+    }
+  }
+  return res
+}
+```
+
+- 测试
+
+```txt
+                1
+            /       \
+          2           3
+        /   \      /     \
+      4       5   6       7
+```
+
+```js
+// root 结构如上
+let root = {
+  val: 1,
+  left: {
+    val: 2,
+    left: {
+      val: 4,
+      left: null,
+      right: null
+    },
+    right: {
+      val: 5,
+      left: null,
+      right: null
+    }
+  },
+  right: {
+    val: 3,
+    left: {
+      val: 6,
+      left: null,
+      right: null
+    },
+    right: {
+      val: 7,
+      left: null,
+      right: null
+    }
+  }
+}
+
+console.log(midOrder(root)); // [4, 2, 5, 1, 6, 3, 7]
+```
+
+#### 后序遍历
+
+- 递归遍历
+
+```js
+function postOrder(root) {
+  let res = [];
+  function __postOrder(root) {
+    if (!root) return null;
+    __postOrder(root.left);
+    __postOrder(root.right);
+    res.push(root.val);
+  }
+  __postOrder(root);
+  return res
+}
+```
+
+- 非递归遍历
+
+```js
+function postOrder(root) {
+  if (!root) return null;
+  let nodes = [];
+  let res = [];
+  nodes.push(root);
+  while (nodes.length) {
+    let node = nodes.pop();
+    res.unshift(node.val);
+    node.left && nodes.push(node.left);
+    node.right && nodes.push(node.right);
+  }
+  return res
+}
+```
+
+- 测试
+
+```txt
+                1
+            /       \
+          2           3
+        /   \      /     \
+      4       5   6       7
+```
+
+```js
+// root 结构如上
+let root = {
+  val: 1,
+  left: {
+    val: 2,
+    left: {
+      val: 4,
+      left: null,
+      right: null
+    },
+    right: {
+      val: 5,
+      left: null,
+      right: null
+    }
+  },
+  right: {
+    val: 3,
+    left: {
+      val: 6,
+      left: null,
+      right: null
+    },
+    right: {
+      val: 7,
+      left: null,
+      right: null
+    }
+  }
+}
+
+console.log(postOrder(root)); // [4, 5, 2, 6, 7, 3, 1]
+```
+
+#### 层序遍历
+
+- 非递归遍历
+
+```js
+function levelOrder(root){
+  // write code here
+  if (!root) return [];
+  let res = [];
+  let nodes = [];
+  nodes.push(root);
+  while(nodes.length) {
+    const len = nodes.length;
+    let tmp = [];
+    for(let i=0; i<len; i++) {
+      let node = nodes.shift();
+      tmp.push(node.val);
+      node.left && nodes.push(node.left);
+      node.right && nodes.push(node.right);
+    }
+    res.push(tmp);
+  }
+  return res;
+}
+```
+
+- 测试
+
+```txt
+                1
+            /       \
+          2           3
+        /   \      /     \
+      4       5   6       7
+```
+
+```js
+// root 结构如上
+let root = {
+  val: 1,
+  left: {
+    val: 2,
+    left: {
+      val: 4,
+      left: null,
+      right: null
+    },
+    right: {
+      val: 5,
+      left: null,
+      right: null
+    }
+  },
+  right: {
+    val: 3,
+    left: {
+      val: 6,
+      left: null,
+      right: null
+    },
+    right: {
+      val: 7,
+      left: null,
+      right: null
+    }
+  }
+}
+
+console.log(levelOrder(root)); // [[1],[2,3],[4,5,6,7]]
+```
+
+## 六、集合
 
 ```js
 // 封装集合的构造函数
@@ -723,7 +1060,7 @@ function Set() {
 }
 ```
 
-## 六、排序算法
+## 七、排序算法
 
 ### 1.冒泡排序
 
