--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -1,6 +1,4 @@
-# 这部分是我秋招投递的公司的记录
-
-投递记录:
+# 秋招投递记录
 
 ## 上海腾讯 PCG 腾讯视频 2020/8/19投递
 
@@ -284,9 +282,10 @@
 12. 页面的优化方式
 13. 跨域的方式
 14. 前端攻击技术CSRF以及防御措施
-15. 移动端、小程序有经验吗
-16. 你的下一步的学习计划是什么
-17. 反问
+15. webpack有搭建过吗？遇到过什么问题没有
+16. 移动端、小程序有经验吗
+17. 你的下一步的学习计划是什么
+18. 反问
 
     - 部门情况（跨境交易事业部）
     - 面试流程 三轮（技术面 小leader 大leader）
