feat: 数据结构添加栈的案例

--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -6,6 +6,7 @@
     - [1.特点](#1特点)
     - [2.自定义栈的完整操作](#2自定义栈的完整操作)
     - [3.使用栈来实现十进制转二进制](#3使用栈来实现十进制转二进制)
+    - [4.判断一个序列是否为合理的出栈顺序](#4判断一个序列是否为合理的出栈顺序)
   - [三、队列](#三队列)
     - [1. 特点](#1-特点)
     - [2. 自定义队列的完整操作](#2-自定义队列的完整操作)
@@ -106,6 +107,29 @@ function dec2bin(decNumer) {
     binayriStrng += stack.pop();
   }
   return binayriStrng;
+}
+```
+
+### 4.判断一个序列是否为合理的出栈顺序
+
+> 例如1，2，3，4，5是入栈顺序，那4，5，3，2，1是一种合理的出栈顺序，4，3，5，1，2则不是一种合理的出栈顺序
+
+```js
+// pushV是入栈顺序的数组，popV是要判断的出栈顺序数组
+function IsPopOrder(pushV, popV) {
+  const stack = [];
+  pushV.forEach(item => {
+    if (item === popV[0]) {
+      popV.shift();
+      while(stack.length && stack[stack.length - 1] === popV[0]) {
+        stack.pop();
+        popV.shift();
+      }
+    } else {
+      stack.push(item);
+    }
+  })
+  return !stack.length && !popV.length;
 }
 ```
 
