--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -31,6 +31,8 @@
     - [5.快速排序](#5快速排序)
     - [6.归并排序](#6归并排序)
     - [7.堆排序](#7堆排序)
+  - [八、经典问题](#八经典问题)
+    - [TOPK问题](#topk问题)
 
 - 数组(Array)
 - 栈(Stack)
@@ -1440,4 +1442,46 @@ function heapSort(data) {
 
 var sortedData = heapSort(dat);
 console.log(sortedData);
+```
+
+## 八、经典问题
+
+### TOPK问题
+
+- 堆排
+
+> 时间复杂度： nlngk
+
+```js
+// 小顶堆
+function adjustHeap(arr, i, len) {
+  let tmp = arr[i];
+  for (let j = 2 * i + 1; j < len; j = 2 * j + 1) {
+    if (j + 1 < len && arr[j] > arr[j + 1]) {
+      j++;
+    }
+    if (arr[j] < arr[i]) {
+      [arr[i], arr[j]] = [arr[j], arr[i]];
+      i = j;
+    } else {
+      break;
+    }
+  }
+}
+
+function topK(arr, k) {
+  let a = arr.splice(0, k);
+  for (let i = a.length >> 1; i > 0; i--) {
+    adjustHeap(a, i, a.length)
+  };
+  for (let i = 0; i < arr.length; i++) {
+    if (arr[i] > a[0]) {
+      a[0] = arr[i];
+      adjustHeap(a, 0 ,k)
+    }
+  }
+  return a[0];
+}
+
+console.log(topK([1, 2, 3, 5, 6, 7], 4)); // 3
 ```
