--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -220,6 +220,44 @@
 
 ### 四面 2020/9/3
 
+1. 自我介绍
+2. 为什么没有继续实习
+3. 说一说你认为最有成果的项目
+4. 现在让你自己对自己提需求，你觉得项目还有哪些改进点
+5. 手撕代码：
+
+    ```txt
+    倒计时
+    截止时间 2020年11月11日 0点
+    显示“剩余XX天XX时XX分XX秒”
+    每秒刷新一次
+    ```
+
+    ```js
+    let deadline = new Date('2020/11/11 00:00:00').getTime();
+    window.setInterval(getDeadline, 1000);
+
+    function getDeadline() {
+        let cur = Date.now();
+        let time = deadline - cur;
+        let day = parseInt(time / 1000 / 3600 / 24);
+        let hour = parseInt((time - day * 24 * 3600 * 1000) / 1000 / 3600);
+        let min = parseInt((time - day * 24 * 3600 * 1000 - hour * 3600 * 1000) / 1000 / 60);
+        let sec = parseInt((time - day * 24 * 3600 * 1000 - hour * 3600 * 1000 - min * 60 * 1000) / 1000);
+        // 都显示成两位数 1 -> 01
+        day = ('00' + day).slice(-2);
+        hour = ('00' + hour).slice(-2);
+        min = ('00' + min).slice(-2);
+        sec = ('00' + sec).slice(-2);
+        console.log(`剩余${day}天${hour}时${min}分${sec}秒`);
+    }
+    ```
+
+6. 反问
+
+    - 前端的技术栈迭代这么快，有什么值得推荐我了解或是学习一下的吗
+    - 您来字节多久了？可以分享一下您的收获吗
+
 ## 上海京东 2020/7/19投递 数科（提前批转校招）
 
 > 笔试时间 2020/8/27
