--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -224,7 +224,8 @@
 2. 为什么没有继续实习
 3. 说一说你认为最有成果的项目
 4. 现在让你自己对自己提需求，你觉得项目还有哪些改进点
-5. 手撕代码：
+5. 如何学习前端的，接下来准备学习什么
+6. 手撕代码：
 
     ```txt
     倒计时
@@ -253,7 +254,7 @@
     }
     ```
 
-6. 反问
+7. 反问
 
     - 前端的技术栈迭代这么快，有什么值得推荐我了解或是学习一下的吗
     - 您来字节多久了？可以分享一下您的收获吗
@@ -337,6 +338,8 @@
 
 ## 网易互联网 网易严选/网易有道 2020/8/29投递
 
-## 滴滴 CTO线 2020/8/29投递（内推）
+## 杭州滴滴 CTO线 2020/8/29投递（内推）
 
 ## 南京小米 2020/8/31（内推）
+
+## 百度 2020/9/3投递
