--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -1294,26 +1294,25 @@ function quickSort(arr, left = 0, right = arr.length - 1) {
 > 3.取基准值为数组最中间的数
 
 ```js
-function quickSort(arr, left, right) {
-  if (left < right) {
-    var mid = arr[parseInt((left + right) / 2)], //枢纽选择的是中间的
-      l = left,
-      r = right;
-    while (true) {
-      while (arr[l] < mid) {
-        l++;
-      }
-      while (arr[r] > mid) {
-        r--;
-      }
-      if (l >= r) {
-        break;
-      }
-      [arr[l], arr[r]] = [arr[r], arr[l]];
+function quickSort(arr, left = 0, right = arr.length - 1) {
+  if (left >= right) return;
+  var mid = arr[parseInt((left + right) / 2)], //枢纽选择的是中间的
+    l = left,
+    r = right;
+  while (true) {
+    while (arr[l] < mid) {
+      l++;
     }
-    quickSort(arr, left, l - 1);
-    quickSort(arr, l + 1, right);
+    while (arr[r] > mid) {
+      r--;
+    }
+    if (l >= r) {
+      break;
+    }
+    [arr[l], arr[r]] = [arr[r], arr[l]];
   }
+  quickSort(arr, left, l - 1);
+  quickSort(arr, l + 1, right);
   return arr;
 }
 ```
@@ -1371,11 +1370,8 @@ function merge(left, right) {
       result.push(right.shift());
     }
   }
-
   while (left.length) result.push(left.shift());
-
   while (right.length) result.push(right.shift());
-
   return result;
 }
 ```
