--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -259,6 +259,16 @@
     - 前端的技术栈迭代这么快，有什么值得推荐我了解或是学习一下的吗
     - 您来字节多久了？可以分享一下您的收获吗
 
+### HR面 2020/9/3
+
+> hr面基本就是聊天了，只有七八分钟
+
+1. 整个四轮的技术面试体验
+2. 在哪些其他大厂的流程中
+3. 大概什么时候拿到毕业论文
+4. 如果给到校招offer，最快什么时候能够提前来实习
+5. 反问
+
 ## 上海京东 2020/7/19投递 数科（提前批转校招）
 
 > 笔试时间 2020/8/27
@@ -315,16 +325,21 @@
 6. 脱离文档流的的方式
 7. position的默认值（static）
 8. JS onload 和 DOMContentLoaded事件
+
+    - 当整个页面及所有依赖资源如样式表和图片都已完成加载时，将触发load事件。它与DOMContentLoaded不同，后者只要页面DOM加载完成就触发，无需等待依赖资源的加载。
+    - 当纯HTML被完全加载以及解析时，DOMContentLoaded 事件会被触发，而不必等待样式表，图片或者子框架完成加载。
+
 9. Vue 路由，监听的什么事件
 10. Vuex的底层是怎么实现的
-11. Web图片格式你知道哪些
-12. 页面的优化方式
-13. 跨域的方式
-14. 前端攻击技术CSRF以及防御措施
-15. webpack有搭建过吗？遇到过什么问题没有
-16. 移动端、小程序有经验吗
-17. 你的下一步的学习计划是什么
-18. 反问
+11. 一个 div 中有一个 image 标签，图片的高度是 500px, div 默认样式，则 div 的高度是多少
+12. Web图片格式你知道哪些
+13. 页面的优化方式
+14. 跨域的方式
+15. 前端攻击技术CSRF以及防御措施
+16. webpack有搭建过吗？遇到过什么问题没有
+17. 移动端、小程序有经验吗
+18. 你的下一步的学习计划是什么
+19. 反问
 
     - 部门情况（跨境交易事业部）
     - 面试流程 三轮（技术面 小leader 大leader）
@@ -334,7 +349,11 @@
 
 > 2020/9/1 笔试
 
+### 一面 2020/9/11
+
 ## 美团 到店事业群-广告事业部 2020/8/29投递
+
+> 2020/9/6 笔试
 
 ## 网易互联网 网易严选/网易有道 2020/8/29投递
 
