--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -32,7 +32,7 @@
     - [6.归并排序](#6归并排序)
     - [7.堆排序](#7堆排序)
   - [八、经典问题](#八经典问题)
-    - [TOPK问题](#topk问题)
+    - [TOPK问题 - 堆排](#topk问题---堆排)
 
 - 数组(Array)
 - 栈(Stack)
@@ -1442,16 +1442,18 @@ console.log(sortedData);
 
 ## 八、经典问题
 
-### TOPK问题
+### TOPK问题 - 堆排
 
-- 堆排
+- 一般TOPK问题
 
-> 时间复杂度： nlngk
+```txt
+时间复杂度：遍历数组需要 O(n) 的时间复杂度，一次堆化需要 O(logk) 时间复杂度，所以利用堆求 Top k 问题的时间复杂度为 O(nlogk)
+空间复杂度：O(n)
+```
 
 ```js
 // 小顶堆
 function adjustHeap(arr, i, len) {
-  let tmp = arr[i];
   for (let j = 2 * i + 1; j < len; j = 2 * j + 1) {
     if (j + 1 < len && arr[j] > arr[j + 1]) {
       j++;
@@ -1467,7 +1469,7 @@ function adjustHeap(arr, i, len) {
 
 function topK(arr, k) {
   let a = arr.splice(0, k);
-  for (let i = a.length >> 1; i > 0; i--) {
+  for (let i = (k-1) >> 1; i >= 0; i--) {
     adjustHeap(a, i, a.length)
   };
   for (let i = 0; i < arr.length; i++) {
@@ -1480,4 +1482,74 @@ function topK(arr, k) {
 }
 
 console.log(topK([1, 2, 3, 5, 6, 7], 4)); // 3
+```
+
+- 升级TOPK问题
+
+[leetcode： 347. 前 K 个高频元素](https://leetcode-cn.com/problems/top-k-frequent-elements/)
+
+```txt
+给定一个非空的整数数组，返回其中出现频率前 k 高的元素。
+
+示例 1:
+
+输入: nums = [1,1,1,2,2,3], k = 2
+输出: [1,2]
+
+示例 2:
+
+输入: nums = [1], k = 1
+输出: [1]
+
+提示：
+
+你可以假设给定的 k 总是合理的，且 1 ≤ k ≤ 数组中不相同的元素的个数。
+你的算法的时间复杂度必须优于 O(n log n) , n 是数组的大小。
+题目数据保证答案唯一，换句话说，数组中前 k 个高频元素的集合是唯一的。
+你可以按任意顺序返回答案。
+```
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number[]}
+ */
+var topKFrequent = function (nums, k) {
+    let map = new Map();
+    nums.forEach((item, index) => {
+        if (map.has(item)) {
+            map.set(item, map.get(item) + 1);
+        } else {
+            map.set(item , 1);
+        }
+    })
+    let arr = [...map.keys()]; // 不重复的数字
+    if (arr.length < k) return arr;
+
+    function adjustHeap(nums, i, len) {
+        for (let j = 2 * i + 1; j < len; j = 2 * j + 1) {
+            if (j + 1 < len && map.get(nums[j]) > map.get(nums[j + 1])) {
+                j++;
+            }
+            if (map.get(nums[i]) > map.get(nums[j])) {
+                [nums[i], nums[j]] = [nums[j], nums[i]];
+                i = j;
+            } else {
+                break;
+            }
+        }
+    }
+    let a = arr.splice(0, k);
+    for (let i = (k-1) >> 1 ; i >=0 0; i--) {
+        adjustHeap(a, i, a.length);
+    }
+    for (let i = 0; i < arr.length; i++) {
+        if (map.get(arr[i]) > map.get(a[0])) {
+            a[0] = arr[i];
+            adjustHeap(a, 0, k);
+        }
+    }
+    return a
+};
 ```
