--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -9,6 +9,7 @@
     - [实现 call](#实现-call)
     - [实现 apply](#实现-apply)
     - [实现 bind](#实现-bind)
+  - [实现一个forEach方法](#实现一个foreach方法)
   - [用reduce实现map](#用reduce实现map)
   - [['1', '2', '3'].map(parseInt)返回值](#1-2-3mapparseint返回值)
   - [手写一个instanceof](#手写一个instanceof)
@@ -382,6 +383,23 @@ function bar(b, c) {
 }
 bar.myBind(obj)(20, 30)
 bar.myBind(obj, 20, 30)()
+```
+
+## 实现一个forEach方法
+
+```js
+Array.prototype._forEach = function(fn) {
+    if (typeof fn !== 'function') return;
+    for(let i=0; i<this.length; i++) {
+        fn(this[i], i, this)
+    }
+}
+
+// test
+let arr = [1,2,3,4,5];
+arr._forEach((item, index) => {
+    console.log(item, index);
+})
 ```
 
 ## 用reduce实现map
