--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -18,6 +18,7 @@
   - [手写Promise.all()](#手写promiseall)
   - [手写Promise.race()](#手写promiserace)
   - [手写一个 Ajax](#手写一个-ajax)
+  - [实现一个红绿灯（3s打印red，2s打印green，1s打印yellow）](#实现一个红绿灯3s打印red2s打印green1s打印yellow)
   - [斐波那契数列（递归，DP，循环）](#斐波那契数列递归dp循环)
   - [数组去重](#数组去重)
   - [实现一个add函数 满足add(1,2,3)与add(1)(2)(3)结果相同](#实现一个add函数-满足add123与add123结果相同)
@@ -795,6 +796,28 @@ function getJSON(url) {
     xhr.send(null)
   })
 }
+```
+
+## 实现一个红绿灯（3s打印red，2s打印green，1s打印yellow）
+
+```js
+let setColor = function (color, delay) {
+    return new Promise(resolve => {
+        setTimeout(() => {
+            console.log(color);
+            resolve();
+        }, delay);
+    })
+}
+
+async function sett() {
+    await setColor('red', 3000);
+    await setColor('green', 2000);
+    await setColor('yellow', 1000);
+    await sett();
+}
+
+sett();
 ```
 
 ## 斐波那契数列（递归，DP，循环）
