--- a/09.面试复盘/春招面试复盘.md
+++ b/09.面试复盘/春招面试复盘.md
@@ -29,7 +29,8 @@
 - [面试复盘记录](#面试复盘记录)
   - [vivo 南京](#vivo-南京)
     - [一面 2020/04/09](#一面-20200409)
-  - [华为 CBG 软件部 南研所](#华为-cbg-软件部-南研所)
+  - [华为 CBG 软件部 南研所 (offer)](#华为-cbg-软件部-南研所-offer)
+    - [笔试 2020/4/15](#笔试-2020415)
     - [一面 2020/4/22 42min](#一面-2020422-42min)
     - [二面 2020/5/13 40min](#二面-2020513-40min)
   - [美团 上海 到店](#美团-上海-到店)
@@ -73,7 +74,74 @@
 14. 未来的规划
 15. 你有什么想问我的
 
-## 华为 CBG 软件部 南研所
+## 华为 CBG 软件部 南研所 (offer)
+
+### 笔试 2020/4/15
+
+- 第一题
+
+```txt
+第一题：求获胜者，如果票数相当，按照字母排序，a>b>c,A>B>C,如果字母相同，则字母少的在前面，比如Luc>Lucy
+
+输入：
+Tom，Lily，Tom，Lucy，Lucy，Jack
+
+输出：
+Lucy
+```
+
+```js
+function find(arr) {
+    let map = {};
+    for(let name of arr) {
+        if (/[a-zA-Z]/g.test(name)) {
+            if (map[name]) {
+                map[name]++
+            } else {
+                map[name] = 1;
+            }
+        } else {
+            return 'error0.0001'
+        }
+    }
+    let a = Object.entries(map).sort((a,b) => b[1]-a[1]);
+    let tmp = a.filter(e => e[1] === a[0][1]);
+    console.log(tmp);
+    tmp.sort((a,b) => a[0].charCodeAt()-b[0].charCodeAt());
+    console.log(tmp);
+    return tmp[0][0]
+}
+console.log(find(['Tom','Lily','Tom','Lucy','Lucy','Jack']));
+```
+
+- 第二题
+
+```txt
+第二题：字符串匹配
+
+输入：
+read read[addr=0x17,mask=0xff,val=0x7],read_his[addr=0xff,mask=0xff,val=0x1],read[addr=0xf0,mask=0xff,val=0x80]
+
+输出：
+0x17 0xff 0x7
+0xf0 0xff 0x80
+```
+
+```js
+function find(str) {
+    let s = str.split(' ')[0];
+    // 注意要写动态的正则的时候，[]是正则的匹配方法，所以如果想要匹配'[]'这个字符的话，需要两个斜杠\\来转义
+    let reg = new RegExp(s + "\\[(addr=0\[xX\][0-9a-zA-Z]+),mask=(0\[xX\]\[0-9a-zA-Z\]+),val=(0\[xX\]\[0-9a-zA-Z\]+)\\]", 'g');// 全局匹配不能少
+    let res = str.match(reg);
+    if (!res.length) return 'FAIL';
+    res.forEach(s => {
+        console.log(s.match(/0[xX][0-9a-zA-Z]+/g).join(' '));
+    })
+}
+
+let str = 'read read[addr=0x17,mask=0xff,val=0x7],read_his[addr=0xff,mask=0xff,val=0x1],read[addr=0xf0,mask=0xff,val=0x80]';
+find(str);
+```
 
 ### 一面 2020/4/22 42min
 
