--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -33,6 +33,7 @@
     - [7.堆排序](#7堆排序)
   - [八、经典问题](#八经典问题)
     - [TOPK问题 - 堆排](#topk问题---堆排)
+    - [最长连续等于target的子序列](#最长连续等于target的子序列)
 
 - 数组(Array)
 - 栈(Stack)
@@ -1552,4 +1553,30 @@ var topKFrequent = function (nums, k) {
     }
     return a
 };
+```
+
+### 最长连续等于target的子序列
+
+- 滑动窗口
+
+> 时间复杂度：O(N)
+
+```js
+function solution(arr, target) {
+    let i = 0;
+    let j = 0;
+    let sum = arr[0];
+    while (i <= j && i < arr.length - 1) {
+        if (sum === target) {
+            return arr.slice(i, j + 1);
+        } else if (sum < target) {
+            sum += arr[++j];
+        } else {
+            sum -= arr[i++]
+        }
+    }
+    return false;
+}
+
+console.log(solution([3, 2, 1, 5, 4, 3, 7, 9], 12));
 ```
