--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -2,6 +2,7 @@
 
 - [秋招投递记录](#秋招投递记录)
   - [上海腾讯 PCG 腾讯视频 2020/8/19投递](#上海腾讯-pcg-腾讯视频-2020819投递)
+    - [一面 2020/9/9](#一面-202099)
   - [上海字节 Data部门 广告部门](#上海字节-data部门-广告部门)
     - [一面 2020/8/27](#一面-2020827)
     - [二面 2020/8/28](#二面-2020828)
@@ -11,6 +12,9 @@
   - [上海京东 2020/7/19投递 数科（提前批转校招）](#上海京东-2020719投递-数科提前批转校招)
     - [一面 2020/9/1](#一面-202091)
   - [南京华为 两个志愿(CBG云服务部/CBG电商平台) 2020/8/21投递](#南京华为-两个志愿cbg云服务部cbg电商平台-2020821投递)
+    - [一面 2020/9/9](#一面-202099-1)
+    - [二面 2020/9/9](#二面-202099)
+    - [三面 主管面](#三面-主管面)
   - [海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递](#海康威视-三个志愿杭州南京上海-2020821投递)
   - [恒生电子 杭州 2020/8/21投递](#恒生电子-杭州-2020821投递)
   - [上海触宝 2020/8/21投递](#上海触宝-2020821投递)
@@ -29,6 +33,8 @@
 ## 上海腾讯 PCG 腾讯视频 2020/8/19投递
 
 > 笔试时间 2020/8/23
+
+### 一面 2020/9/9
 
 ## 上海字节 Data部门 广告部门
 
@@ -324,6 +330,89 @@
     - 面试流程 两轮技术面
 
 ## 南京华为 两个志愿(CBG云服务部/CBG电商平台) 2020/8/21投递
+
+### 一面 2020/9/9
+
+1. 自我介绍
+2. 项目介绍一下
+3. 项目状态管理工具和路由是用的什么
+4. 撕代码 [leetcode1545](https://leetcode-cn.com/problems/find-kth-bit-in-nth-binary-string/)
+
+    ```js
+    function findKthBit(n, k) {
+        let s = '0';
+        let reverse = (s) => {
+            return s.split('').map(e => 1 - e).reverse().join('');
+        }
+        for (let i = 1; i < n; i++) {
+            s = s + '1' + reverse(s);
+        }
+        return s[k - 1]
+    }
+
+    // 优化一下，讲一下思路，递归，比如二分查找知道吗
+    var findKthBit = function(n, k) {
+        if (n===1) return '0';
+        let mid = 1 << (n-1); // Math.pow(2, n-1)
+        if (k === mid) return '1';
+        else if(k < mid) return findKthBit(n-1, k);
+        else return 1 - findKthBit(n-1, (1<<n) - k) + ''; // Math.pow(2, n)
+    };
+    ```
+
+### 二面 2020/9/9
+
+1. 自我介绍
+2. 聊论文
+3. 聊项目
+4. 手撕代码 [leetcode1371](https://leetcode-cn.com/problems/find-the-longest-substring-containing-vowels-in-even-counts/)
+
+    ```js
+    // 没有什么暴力循环不能解决的事，如果有，那就再暴力点
+    function solution(s) {
+        let max = 0;
+        let judge = (s) => {
+            let map = {
+                a: 0,
+                e: 0,
+                i: 0,
+                o: 0,
+                u: 0
+            };
+            for (let i = 0; i < s.length; i++) {
+                if (map[s[i]] !== undefined) map[s[i]]++;
+            }
+            // console.log(map);
+            return (map.a % 2 === 0) &&
+                (map.e % 2 === 0) &&
+                (map.i % 2 === 0) &&
+                (map.o % 2 === 0) &&
+                (map.u % 2 === 0)
+        }
+        // console.log(judge('eleetminicoworoep'));
+        for (let i = 0; i < s.length; i++) {
+            for (let j = i; j < s.length; j++) {
+                if (judge(s.slice(i, j + 1))) {
+                    max = Math.max(max, j - i + 1);
+                }
+            }
+        }
+        return max;
+    }
+    ```
+
+5. 反问
+    - 部门前端规模，云服务部（二级部门）下面有十几个三级部门，每个三级部门下面有几个四级部门
+    - 面试官是云服务部下面的智慧业务部
+
+### 三面 主管面
+
+1. 自我介绍，讲讲实习项目和学校项目，深挖实习项目
+2. 职业发展规划
+3. 优缺点
+4. 你对华为的了解
+5. 你觉得你能胜任华为的工作吗
+6. 反问
 
 ## 海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递
 
