--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -3,6 +3,7 @@
 - [秋招投递记录](#秋招投递记录)
   - [上海腾讯 PCG 腾讯视频 2020/8/19投递](#上海腾讯-pcg-腾讯视频-2020819投递)
     - [一面 2020/9/9](#一面-202099)
+    - [一面 2020/9/9](#一面-202099-1)
   - [上海字节 Data部门 广告部门](#上海字节-data部门-广告部门)
     - [一面 2020/8/27](#一面-2020827)
     - [二面 2020/8/28](#二面-2020828)
@@ -12,9 +13,9 @@
   - [上海京东 2020/7/19投递 数科（提前批转校招）](#上海京东-2020719投递-数科提前批转校招)
     - [一面 2020/9/1](#一面-202091)
   - [南京华为 两个志愿(CBG云服务部/CBG电商平台) 2020/8/21投递](#南京华为-两个志愿cbg云服务部cbg电商平台-2020821投递)
-    - [一面 2020/9/9](#一面-202099-1)
+    - [一面 2020/9/9](#一面-202099-2)
     - [二面 2020/9/9](#二面-202099)
-    - [三面 主管面](#三面-主管面)
+    - [三面 主管面 2020/9/9](#三面-主管面-202099)
   - [海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递](#海康威视-三个志愿杭州南京上海-2020821投递)
   - [恒生电子 杭州 2020/8/21投递](#恒生电子-杭州-2020821投递)
   - [上海触宝 2020/8/21投递](#上海触宝-2020821投递)
@@ -32,7 +33,25 @@
 
 ## 上海腾讯 PCG 腾讯视频 2020/8/19投递
 
-> 笔试时间 2020/8/23
+> 笔试时间 2020/8/23 腾讯视频莫名挂了，被CSIG捞起来了
+
+### 一面 2020/9/9
+
+1. 自我介绍
+2. 项目
+3. Vue组件通信
+4. Vue nextTick的作用
+5. 讲讲js的技术
+6. prototype constructor
+7. 宏任务和微任务
+8. css清除浮动
+9. css水平垂直居中
+10. 手撕代码：二分查找和快排
+11. 反问
+
+    - 部门：CSIG 企业产品部
+    - 前端规模 30-40人
+    - 技术栈：Vue
 
 ### 一面 2020/9/9
 
@@ -399,13 +418,16 @@
         }
         return max;
     }
+
+    // 优化
+    
     ```
 
 5. 反问
     - 部门前端规模，云服务部（二级部门）下面有十几个三级部门，每个三级部门下面有几个四级部门
     - 面试官是云服务部下面的智慧业务部
 
-### 三面 主管面
+### 三面 主管面 2020/9/9
 
 1. 自我介绍，讲讲实习项目和学校项目，深挖实习项目
 2. 职业发展规划
@@ -413,6 +435,8 @@
 4. 你对华为的了解
 5. 你觉得你能胜任华为的工作吗
 6. 反问
+    - 面试官也是云服务部下面的智慧业务部
+    - 部门业务，基本算互联网
 
 ## 海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递
 
