feat: 京东二面腾讯二面

--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -3,17 +3,18 @@
 - [秋招投递记录](#秋招投递记录)
   - [上海腾讯 PCG 腾讯视频 2020/8/19投递](#上海腾讯-pcg-腾讯视频-2020819投递)
     - [一面 2020/9/9](#一面-202099)
-    - [一面 2020/9/9](#一面-202099-1)
+    - [二面 2020/9/10](#二面-2020910)
   - [上海字节 Data部门 广告部门](#上海字节-data部门-广告部门)
     - [一面 2020/8/27](#一面-2020827)
     - [二面 2020/8/28](#二面-2020828)
     - [三面 2020/9/1](#三面-202091)
     - [四面 2020/9/3](#四面-202093)
     - [HR面 2020/9/3](#hr面-202093)
-  - [上海京东 2020/7/19投递 数科（提前批转校招）](#上海京东-2020719投递-数科提前批转校招)
+  - [上海京东 2020/7/19投递 数科（提前批转校招） 校招是京东零售 业务平台中心](#上海京东-2020719投递-数科提前批转校招-校招是京东零售-业务平台中心)
     - [一面 2020/9/1](#一面-202091)
+    - [二面 2020/9/10](#二面-2020910-1)
   - [南京华为 两个志愿(CBG云服务部/CBG电商平台) 2020/8/21投递](#南京华为-两个志愿cbg云服务部cbg电商平台-2020821投递)
-    - [一面 2020/9/9](#一面-202099-2)
+    - [一面 2020/9/9](#一面-202099-1)
     - [二面 2020/9/9](#二面-202099)
     - [三面 主管面 2020/9/9](#三面-主管面-202099)
   - [海康威视 三个志愿(杭州/南京/上海) 2020/8/21投递](#海康威视-三个志愿杭州南京上海-2020821投递)
@@ -47,13 +48,102 @@
 8. css清除浮动
 9. css水平垂直居中
 10. 手撕代码：二分查找和快排
+
+    ```js
+    // 二分查找
+    function binarySearch(arr, target) {
+        if (arr.length < 1) return false;
+        let mid = arr.length >> 1;
+        if (arr[mid] === target) {
+            return true;
+        } else if (arr[mid] < target) {
+            return find(arr.slice(mid + 1, target))
+        } else {
+            return find(arr.slice(0, mid), target)
+        }
+    }
+    // 快排
+    function quickSort(arr, l = 0, r = arr.length - 1) {
+        if (l >= r) return;
+        let baseId = l;
+        let baseVal = arr[baseId];
+        let [i, j] = [l, r];
+        while (i < j) {
+            while (j > i && arr[j] >= baseVal) {
+                j--;
+            }
+            while (i < j && arr[i] <= baseVal) {
+                i++;
+            }
+            [arr[i], arr[j]] = [arr[j], arr[i]]
+        }
+        [arr[baseId], arr[i]] = [arr[i], arr[baseId]];
+        quickSort(arr, 0, i - 1);
+        quickSort(arr, i + 1, r)
+        return arr;
+    }
+    console.log(quickSort([3,1,5,2,6,4]));
+    ```
+
 11. 反问
 
     - 部门：CSIG 企业产品部
     - 前端规模 30-40人
     - 技术栈：Vue
 
-### 一面 2020/9/9
+### 二面 2020/9/10
+
+1. 自我介绍
+2. 聊项目
+3. Vue双向数据绑定原理
+4. 怎么监听数组呢 数组的push方法可以监听到，为什么通过下标的方法修改无法监听呢
+5. 手撕代码 冒泡排序 异步加载图片 在数组的push方法执行前打印123，怎么实现
+
+    ```js
+    // 冒泡排序
+    function bubbleSort(arr) {
+        for (let i = arr.length - 1; i >= 0; i--) {
+            for (let j = 0; j < i; j++) {
+                if(arr[j] > arr[j+1]) {
+                    [arr[j], arr[j+1]] = [arr[j+1], arr[j]];
+                }
+            }
+        }
+        return arr;
+    }
+    console.log(bubbleSort([3,6,2,5,1,4]));
+
+    // 异步加载图片
+    function loadImage(url) {
+        return new Promise((resolve, reject) => {
+            const image = new Image();
+            image.src = url;
+            image.onload = function () {
+                document.body.appendChild(image);
+                resolve('ok');
+            }
+        })
+    }
+    let p = Promise.resolve();
+    const imgs = [url1, url2, url3, ..., urln];
+    for (let url of imgs) {
+        p.then(() => loadImage(url))
+    }
+
+    // 一直没理解意思，反正下面的代码能实现，但面试官的意思是要是我换成shift splice的话你还需要重新写
+    let flag = true;
+    Array.prototype.push = function (...args) {
+        if (flag) {
+            flag = !flag;
+            console.log(123);
+            return this.push(...args);
+        }
+    }
+
+    let arr = [1,2,3];
+    arr.push(4,5)
+    console.log(arr);
+    ```
 
 ## 上海字节 Data部门 广告部门
 
@@ -320,7 +410,7 @@
 4. 如果给到校招offer，最快什么时候能够提前来实习
 5. 反问
 
-## 上海京东 2020/7/19投递 数科（提前批转校招）
+## 上海京东 2020/7/19投递 数科（提前批转校招） 校招是京东零售 业务平台中心
 
 > 笔试时间 2020/8/27
 
@@ -347,6 +437,18 @@
     - 部门的具体情况 京东内容的大前端团队 部门的技术偏向react
     - 大前端大概有多少人 几十人。。。
     - 面试流程 两轮技术面
+
+### 二面 2020/9/10
+
+1. 自我介绍
+2. 论文
+3. 项目
+4. 前端哪里学的最好，讲讲
+5. 实习的收获
+6. 反问
+
+    - 太快了，都不问知识点的嘛。。。 部门是啥 京东零售 平台业务中心（电商）
+    - 业务介绍 主要是做内容生态相关的，B端和C端都有
 
 ## 南京华为 两个志愿(CBG云服务部/CBG电商平台) 2020/8/21投递
 
@@ -401,14 +503,12 @@
             for (let i = 0; i < s.length; i++) {
                 if (map[s[i]] !== undefined) map[s[i]]++;
             }
-            // console.log(map);
             return (map.a % 2 === 0) &&
                 (map.e % 2 === 0) &&
                 (map.i % 2 === 0) &&
                 (map.o % 2 === 0) &&
                 (map.u % 2 === 0)
         }
-        // console.log(judge('eleetminicoworoep'));
         for (let i = 0; i < s.length; i++) {
             for (let j = i; j < s.length; j++) {
                 if (judge(s.slice(i, j + 1))) {
@@ -420,7 +520,6 @@
     }
 
     // 优化
-    
     ```
 
 5. 反问
