--- a/09.面试复盘/智力题.md
+++ b/09.面试复盘/智力题.md
@@ -6,3 +6,6 @@ A从两头烧，B从一头烧。当A烧完时，将B熄灭。再将B从两头烧
 
 ## 有两个容器，一个最大容量60L，一个最大容量50L，如何靠这两个容器得到30L溶液
 
+1. 容器A是60L，容器B是50L，A装满倒入B，A还剩10L，B倒空，将10L倒入B
+2. A倒满，倒入B，A还剩下20L，B倒空，将20L倒入B
+3. A倒满，倒入B，A还剩下30L，完成
