--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -824,6 +824,8 @@ sett();
 
 - 递归
 
+> 时间复杂度O(2^N) 空间复杂度O(1)
+
 ```js
 function fiber(n) {
   if (n == 0 || n == 1) {
@@ -838,6 +840,8 @@ console.log(fiber(5))
 
 - DP 动态规划
 
+> 时间复杂度O(N)  空间复杂度O(N)
+
 ```js
 function fiber(n) {
   if (n === 0 || n === 1) return n
@@ -848,6 +852,10 @@ function fiber(n) {
   return dp[n]
 }
 ```
+
+- 循环
+
+> 时间复杂夫O(N) 空间复杂度O(1)
 
 ```js
 function fiber(n) {
