--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -13,6 +13,7 @@
   - [上海京东 2020/7/19投递 数科（提前批转校招） 校招是京东零售 业务平台中心](#上海京东-2020719投递-数科提前批转校招-校招是京东零售-业务平台中心)
     - [一面 2020/9/1](#一面-202091)
     - [二面 2020/9/10](#二面-2020910-1)
+    - [HR面 2020/9/11](#hr面-2020911)
   - [南京华为 两个志愿(CBG云服务部/CBG电商平台) 2020/8/21投递](#南京华为-两个志愿cbg云服务部cbg电商平台-2020821投递)
     - [一面 2020/9/9](#一面-202099-1)
     - [二面 2020/9/9](#二面-202099)
@@ -97,7 +98,22 @@
 2. 聊项目
 3. Vue双向数据绑定原理
 4. 怎么监听数组呢 数组的push方法可以监听到，为什么通过下标的方法修改无法监听呢
-5. 手撕代码 冒泡排序 异步加载图片 在数组的push方法执行前打印123，怎么实现
+
+    vue对数组的7个方法（push、pop、shift、unshift、splice、sort、reverse）实现了响应式
+    其实是可以监听到数组的变化的，根据尤大大的回答是`性能代价和获得的用户体验收益不成正比`，参考文章 [vue为什么不能检测数组的变化](https://juejin.im/post/6844904046722023438)
+
+5. XSS 防御 对用户输入校验的时候需要对什么进行编码 那将`< >`转码成什么呢
+
+    ```txt
+    & 编码成 &amp;
+    < 编码成 &lt;
+    > 编码成 &gt;
+    " 编码成 &quot;
+    ' 编码成 &#39
+    ```
+
+6. CSRF 防御措施 token是客户端还是服务端产生的 怎么传给客户端呢
+7. 手撕代码 冒泡排序 异步加载图片 在数组的push方法执行前打印123，怎么实现
 
     ```js
     // 冒泡排序
@@ -145,7 +161,7 @@
     console.log(arr);
     ```
 
-6. 反问
+8. 反问
 
     - 业务 主要是做企点（营销QQ 企业QQ） qidian.qq.com
 
@@ -453,6 +469,23 @@
 
     - 太快了，都不问知识点的嘛。。。 部门是啥 京东零售 平台业务中心（电商）
     - 业务介绍 主要是做内容生态相关的，B端和C端都有
+
+### HR面 2020/9/11
+
+1. 自我介绍
+2. 为什么投递前端这个岗位
+3. 实习遇到的困难以及如何解决的
+4. 实习期间同事或者上司对我的评价
+5. 第一份工作会考虑哪些因素
+6. 岗位符合你对自己的期待吗
+7. 有参加其他公司的流程
+8. 个人意向，面试感受
+9. 对工作薪资方面的期待
+10. 给出京东三个选择你的理由
+11. 反问
+
+    - 多久出结果 尽快
+    - 二面面试官是leader或是主管吗，因为没有写代码的环节
 
 ## 南京华为 两个志愿(CBG云服务部/CBG电商平台) 2020/8/21投递
 
