feat: 添加面试题

--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -1569,6 +1569,53 @@ process.nextTick(function(){
 5
 ```
 
+- 以下两题来源于面试
+
+```js
+async function f(){
+    await new Promise(resolve => {
+        setTimeout(() => {
+            console.log('1');
+        }, 2000);
+    })
+    await new Promise(resolve => {
+        setTimeout(() => {
+            console.log('2');
+        }, 3000);
+    })
+
+    console.log('3');
+}
+
+f()
+// 2秒后输出1，原因是await之后返回的promise状态没有发生变化，一直是pending
+// 在promise中加上   resolve() 就能打印  3 了
+```
+
+```js
+async function f2() {
+    let promiseA = new Promise(resolve => {
+        setTimeout(() => {
+            console.log('1');
+        }, 2000);
+    })
+
+    let promiseB = new Promise(resolve => {
+        setTimeout(() => {
+            console.log('2');
+        }, 3000);
+    })
+
+    await promiseA;
+    await promiseB;
+    console.log('3');
+}
+f2()
+// 2秒打印1，再过1秒打印2
+// 这里3不打印的原因也是因为await返回的promise状态没有变化，一直是pending
+// 在promise中加上   resolve() 就能打印  3 了
+```
+
 ## 水平垂直居中
 
 - html代码
