--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -628,7 +628,7 @@
 
 ### 一面 2020/9/11
 
-1. 自我面试
+1. 自我介绍
 2. 队列和栈的区别
 3. 排序算法以及各自的复杂度
 4. 快排什么时候复杂度最差
@@ -755,6 +755,10 @@
         return res;
     }
     ```
+
+29. 反问
+
+    部门业务，前端规模
 
 ## 美团 到店事业群-广告事业部 2020/8/29投递
 
