--- a/09.面试复盘/秋招面试复盘.md
+++ b/09.面试复盘/秋招面试复盘.md
@@ -642,11 +642,13 @@
     cache-control是http1.1的，expires是http1.0的
 
 11. Etag和Last-Modified的区别
-12. 事务的四个特性
+12. Etag返回什么状态码
+13. 3开头的还有什么状态码，4开头的呢，5开头的呢，504表示什么（网关超时）
+14. 事务的四个特性
 
     原子性、一致性、隔离性、持久性
 
-13. 进程与线程的区别
+15. 进程与线程的区别
 
     ```txt
     1、进程是资源分配的最小单位，线程是程序执行的最小单位（资源调度的最小单位）
@@ -656,8 +658,8 @@
     4、但是多进程程序更健壮，多线程程序只要有一个线程死掉，整个进程也死掉了，而一个进程死掉并不会对另外一个进程造成影响，因为进程有自己独立的地址空间。
     ```
 
-14. nodejs是单线程还是多线程的，Java呢，C++呢
-15. nodejs单线程的好处是什么
+16. nodejs是单线程还是多线程的，Java呢，C++呢
+17. nodejs单线程的好处是什么
 
     ```txt
     （1）多线程占用内存高
@@ -667,21 +669,21 @@
     （5）线程安全
     ```
 
-16. 水平垂直居中怎么实现
-17. 箭头函数与普通函数的区别
-18. 箭头函数能实现ES6的类吗
-19. 判断数组的方式，instanceof方法有什么弊端
-20. v-if 和 v-show的区别
-21. display:none和visibility：hidden的区别
-22. Vue双向数据绑定原理
-23. Vue怎么监听数组的变化
+18. 水平垂直居中怎么实现
+19. 箭头函数与普通函数的区别
+20. 箭头函数能实现ES6的类吗
+21. 判断数组的方式，instanceof方法有什么弊端
+22. v-if 和 v-show的区别
+23. display:none和visibility：hidden的区别
+24. Vue双向数据绑定原理
+25. Vue怎么监听数组的变化
 
     Vue通过重写数组的某些方法（7种）来监听数组变化，而不是触发数组的setter方法
 
-24. Vue3里通过什么方式监听数据
-25. Vue key的作用
-26. 列表里调整顺序，虚拟DOM是怎么发生变化的
-27. 看代码输出
+26. Vue3里通过什么方式监听数据
+27. Vue key的作用
+28. 列表里调整顺序，虚拟DOM是怎么发生变化的
+29. 看代码输出
 
     ```js
     Promise.resolve().then(() => {
@@ -700,8 +702,9 @@
         console.log('6');
     });
     // 1 3 5 6
+    ```
 
-
+    ```js
     console.log('1');
     setTimeout(() => {
         console.log('2');
@@ -716,7 +719,7 @@
     // 1 5 3 4 2
     ```
 
-28. 代码讲思路
+30. 代码讲思路
 
     ```txt
     给你一个数组 nums，对于其中每个元素 nums[i]，请你统计数组中比它小的所有数字的数目， 以数组形式返回答案。
@@ -756,7 +759,7 @@
     }
     ```
 
-29. 反问
+31. 反问
 
     部门业务，前端规模
 
